# roa

./: .env  .gitignore  Cargo.toml  README.md  compose.yml
migrations/2024-07-16-124733_create_orders/: up.sql
src/: main.rs  schema.rs
src/handlers/: handler_errors.rs  mod.rs  orders_handlers.rs  orders_requests.rs  requests.rs
src/infra/: app_state.rs  db.rs  mod.rs  orders_cleanup.rs  random_duration_gen.rs
src/models/: mod.rs  order_model.rs
src/routes/: health_route.rs  mod.rs  orders_route.rs
src/tests/: integration_test.rs  mod.rs  stress_test.rs
