[package]
name = "rest_ordering_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
diesel = {  version = "2.1", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
diesel_migrations = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.3", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["fast-rng", "v4", "serde"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }

axum-test = "15.3"
tower = "0.4.13"
http-body-util = "0.1"
mime = "0.3.17"

[dev-dependencies]
axum-test-helper = "0.4"